default/netdata/ingress-nas1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nas1-netdata
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: "/netdata"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
  - hosts:
    - nas1-netdata.desertbluffs.com
  backend:
    serviceName: nas1
    servicePort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nas1-netdata-oauth2
  namespace: default
spec:
  tls:
  - hosts:
    - nas1-netdata.desertbluffs.com
  rules:
  - host: nas1-netdata.desertbluffs.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: oauth2-proxy
